Bug 53012 - FILEOPEN .csv will CRASH if "fixed width" is preselected
Summary: FILEOPEN .csv will CRASH if "fixed width" is preselected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.2 rc
Hardware: Other All
: medium critical
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: BSA target:3.7.0 target:3.6.1
Keywords: regression
: 52969 54330 54545 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-07-31 15:51 UTC by Rainer Bielefeld Retired
Modified: 2013-11-14 14:38 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (927 bytes, text/csv)
2012-07-31 15:51 UTC, Rainer Bielefeld Retired
Details
Simplified sample (96 bytes, text/csv)
2012-07-31 15:55 UTC, Rainer Bielefeld Retired
Details
MacoS X log file created on the crash (60.47 KB, text/plain)
2012-08-01 09:02 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2012-07-31 15:51:55 UTC
Created attachment 65001 [details]
sample document

Steps to reproduce with Server Installation of  "LibreOffice 3.6.0.4 rc  English UI/ German Locale [Build-ID:  932b512] on German WIN7 Home Premium (64bit) 
0. download attached sample document
1. Start LibO
   > LibO Start Center appears
2. Menu 'File -> Open -> -> Select "Spreadsheet" -> Browse 
   for sample document -> <open>
   Bug: Crash (for me 100% Reproducible)

Same with 3.6.0.2.

Works fine with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 66e4540]" (tinderbox:Win-x86@6, pull time 2012-07-26 02:09:47)	

Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120715 Firefox/14.0.1 SeaMonkey/2.11
Comment 1 Rainer Bielefeld Retired 2012-07-31 15:55:55 UTC
Created attachment 65002 [details]
Simplified sample

Seems to be a general Problem with all .csv
Comment 2 Rainer Bielefeld Retired 2012-07-31 16:13:46 UTC
Crash might be related to settings in csv open dialog. With 3.6.0.1 I was able to open the document as long a setting was NOT fixed width, but after I had changed to "fixed width" all further attempts to open the document failed.

With this knowledge I now also reproduce the crash in master, but still not in 3.6.0.0.beta3

Already [Reproducible] with Server Installation of  "LibreOffice 3.6.0.1 rc  German UI/Locale [Build-ID: 73f9fb6] on German WIN7 Home Premium (64bit) 

Still was ok  with
- Server Installation of  "LibreOffice 3.6.0.0.beta2  German UI/Locale [Build-ID: f010139] on German WIN7 Home Premium (64bit)  
- Server installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: a502549]" (tinderbox: Win-x86@6-fast, pull time 2012-05-31 07:33:55)

This problem might affect many users.
Comment 3 Jean-Baptiste Faure 2012-07-31 21:26:44 UTC
No crash for me with LO 3.6.0.4 (Build ID: 932b512) under Ubuntu 11.10 x86-64, event with fixed width.

Best regards. JBF
Comment 4 Roman Eisele 2012-08-01 07:47:43 UTC
No crash for me with "Simplified sample" (attachment 65002 [details]) and LibO 3.6.0.4 (Build ID: 932b512, German langpack installed) under MacOS X 10.6.8, even when pre-selection "Fixed Width".

→ Windows only?
Comment 5 vitriol 2012-08-01 07:59:53 UTC
Reproducible for me under Win7 64 bit > New and regression from 3.5.x
Comment 6 vitriol 2012-08-01 08:08:21 UTC
(In reply to comment #0)

> 0. download attached sample document
> 1. Start LibO
>    > LibO Start Center appears
> 2. Menu 'File -> Open -> -> Select "Spreadsheet" -> Browse 
>    for sample document -> <open>

3. Check option "fixed width"

>    Bug: Crash (for me 100% Reproducible)

No crash if sample file is opened from Calc instead of Start Center page.
Comment 7 Roman Eisele 2012-08-01 09:02:05 UTC
Created attachment 65023 [details]
MacoS X log file created on the crash

Sorry -- I *can* reproduce it on MacOS X, too! It just needs a second run ...

For me, it works as following:
0. download attached sample document
1. Start LibO
   > LibO Start Center appears
2. Menu 'File -> Open -> Browse for sample document -> <open>
   (for me, it is NOT necessary to pre-select the file type
    "Spreadsheet", but this may be a Mac/Wind difference)
3. In the dialog window "Text import" which appears now,
   select "Fixed width" and click OK
   > File opens without problems.
4. Close file.
5. Repeat step 1
6. Repeat step 2.
   > But in the moment when the dialog window "Text import" should appear,
   LibO crashes.
From now on, step 5-6 is 100% reproducible: on every attempt to open the file LibO crashes.

The crash obviously appears when drawing the dialog window (cf. stack trace in log file). The crash seems related to the fact that this time (step 6) "Fixed width" should be pre-selected in the dialog window: when I reset my user profile, LibO changes its behaviour back to step 1-3 (the file opens again), but from the next time on I get step 5-6 again (crash when the dialog window should open).


Therefore, REPRODUCIBLE on MacOS 10.6.8 (Intel) both with
* LibreOffice 3.6.0.4 (Build ID: 932b512), German langpack installed;
* LOdev 3.7.0.0.alpha0+ (Build ID: c549e1e, Build date: 2012-07-25, file: master~2012-07-25_02.21.07_LibO-Dev_3.7.0.0.alpha0_MacOS_x86_install_en-US.dmg)

Therefore, NOT Windows only.
Comment 8 Roman Eisele 2012-08-01 09:04:06 UTC
Platform "All" due to comment #7 -- reproducible on Windows and MacOS, even if not reproducible on Linux (comment #3).

But maybe the bug is also reproducible on Linux, and it is just a second run what is missing, just like for me (cf. comment #7)?
Comment 9 Rainer Bielefeld Retired 2012-08-01 09:15:14 UTC
@all: 
Thank you for your tests

@Roman:
I had to select document "Spreadsheet" because of some broken profile issue my 3.6.0.4 opened .csv with Writer by default.

@Spreadsheet Team:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf (and remove others in team from CC)-
Comment 10 Eike Rathke (retired, only occasionally showing up) 2012-08-01 10:07:17 UTC
Crash reproducible with simplified sample in Linux master, taking over.
Comment 11 Not Assigned 2012-08-01 12:03:03 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21cb8210c74e52896ce7fb063f1578b13672f4bd

resolved fdo#53012 crash in CSV fixed width import
Comment 12 Not Assigned 2012-08-01 13:31:18 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9229d932de3bd406c58246293f7a12a88e19861c&g=libreoffice-3-6

resolved fdo#53012 crash in CSV fixed width import


It will be available in LibreOffice 3.6.1.
Comment 13 Jean-Baptiste Faure 2012-08-02 06:30:01 UTC
*** Bug 52969 has been marked as a duplicate of this bug. ***
Comment 14 OG 2012-08-20 20:49:37 UTC
Is there a workaround for this bug? At this time I can't open any csv files. Do I need to downgrade to 3.5.x?
Comment 15 Roman Eisele 2012-08-21 07:44:24 UTC
(In reply to comment #14)
> Is there a workaround for this bug? At this time I can't open any csv files. Do
> I need to downgrade to 3.5.x?

You can download LibreOffice 3.6.1.1 from
  http://www.libreoffice.org/download/pre-releases/
This is a release candidate, of course, but it includes the fix for this bug and many other fixes, and IMHO in general works at least as well as 3.6.0.4 (the release version you probably use).
Comment 16 Eike Rathke (retired, only occasionally showing up) 2012-08-21 11:20:51 UTC
(In reply to comment #14)
> Is there a workaround for this bug?

If you don't want to upgrade to 3.6.1rc you could edit the file registrymodifications.xcu in your user profile and locate the line

<item oor:path="/org.openoffice.Office.Calc/Dialogs/CSVImport"><prop oor:name="FixedWidth" oor:op="fuse"><value>true</value></prop></item>

and change the value true to false. Be careful to not alter the file in any other way, make a backup copy first.

Where to find the user profile depends on your system, on Linux it should be in ~/.config/libreoffice/3/user/
Comment 17 OG 2012-08-23 22:21:29 UTC
Updating to the pre-release software worked great. Thanks all!
Comment 18 Markus Mohrhard 2012-09-01 23:01:41 UTC
*** Bug 54330 has been marked as a duplicate of this bug. ***
Comment 19 Jean-Baptiste Faure 2012-09-20 05:24:52 UTC
*** Bug 54545 has been marked as a duplicate of this bug. ***