resolved fdo#53012 crash in CSV fixed width import

8cd05e9cf1152b21528c6f1a5bda3d949dc49791 changed from using String to
OUString. ScCsvGrid::ImplSetTextLineFix() attempted to copy excess
characters (always CSV_MAXSTRLEN if greater than field width) where
String::Copy() silently ignored the excess length but OUString::copy()
may result in invalid memory accesses and asserts in dbgutil build.

Change-Id: Ic9f7f38d6f2bbd770d6356e1304de8e39c09e30b